Crash using Weight Paint Gradient on mesh with specific modifiers (2 mods depending on normals + generative mod) - missing CD_ORIGINDEX layer then #68024

Closed
opened 2019-07-31 23:07:51 +02:00 by magnative · 18 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
I will randomly crash when you press alt + left mouse [and alt+ctrl+left click] on weight paint mode

Exact steps for others to reproduce the error

EDIT:
Seems like this is caused by two modifiers depending on normals "dependsOnNormals" [Displace modifiers (direction set to Normal) in this case -- but can also be reproduced with two shrinkwraps or two waves with the corresponding settings] will destroy the CD_ORIGINDEX layer [which then cannot be found in BKE_mesh_foreach_mapped_vert -- leading to problems later...if any generative modifier follows]:

#68024.blend

  • if one of the Displace modifiers has its direction changed to something else then Normal, the crash wont happen

ORIGINAL REPORT:

  • just try to do gradient in weight paint mode [with keyboard shortcut], it will crash randomly sometimes.

I speed up video since it happened randomly
bb.mp4

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.60 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** I will randomly crash when you press **alt + left mouse [and alt+ctrl+left click]** on weight paint mode **Exact steps for others to reproduce the error** EDIT: Seems like this is caused by two modifiers depending on normals "dependsOnNormals" [Displace modifiers (direction set to `Normal`) in this case -- but can also be reproduced with two shrinkwraps or two waves with the corresponding settings] will destroy the `CD_ORIGINDEX` layer [which then cannot be found in `BKE_mesh_foreach_mapped_vert` -- leading to problems later...if any generative modifier follows]: [#68024.blend](https://archive.blender.org/developer/F8280651/T68024.blend) - if one of the Displace modifiers has its direction changed to something else then `Normal`, the crash wont happen ORIGINAL REPORT: - just try to do gradient in weight paint mode [with keyboard shortcut], it will crash randomly sometimes. I speed up video since it happened randomly [bb.mp4](https://archive.blender.org/developer/F7640236/bb.mp4)
Author

Added subscriber: @Magnative

Added subscriber: @Magnative

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't reproduce the problem using the default cube, subdivided a few times.
Please provide simple steps to reproduce the problem. (Preferably from the default cube).

I can't reproduce the problem using the default cube, subdivided a few times. Please provide simple steps to reproduce the problem. (Preferably from the default cube).

Added subscriber: @CraigD

Added subscriber: @CraigD

Hmm. I haven't been able to replicate this after several minutes of trying on the default cube. I'm wondering if there's something about your file or system that's tripping you up...

Have you tried resetting to factory settings (in case you have a glitchy addon) and seeing if this persists?
Does the same thing happen in other files (such as the default cube, or other unrelated meshes in other files)?
Are all your drivers up to date?

My Testing System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25
Blender Version
2.80 (sub 74)

Hmm. I haven't been able to replicate this after several minutes of trying on the default cube. I'm wondering if there's something about your file or system that's tripping you up... Have you tried resetting to factory settings (in case you have a glitchy addon) and seeing if this persists? Does the same thing happen in other files (such as the default cube, or other unrelated meshes in other files)? Are all your drivers up to date? My Testing System Information Operating system: Windows-10-10.0.17134 64 Bits Graphics card: GeForce MX130/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.25 Blender Version 2.80 (sub 74)
Author

No, it not work with default cube

It happened when I import model to blender [.fbx/.dae]
I try factory setting it still won't work, it usually crash when I hold Alt then left click to paint

It not crash on all file but some file will

all driver are up to date

model that crash on 2.8 will not crash on 2.79

No, it not work with default cube It happened when I import model to blender [.fbx/.dae] I try factory setting it still won't work, it usually crash when I hold Alt then left click to paint It not crash on all file but some file will all driver are up to date model that crash on 2.8 will not crash on 2.79

Can you maybe create a blend file with one of the imported object models that causes the crashing issue? It would help the developers to investigate the issue further if you uploaded the file.

Can you maybe create a blend file with one of the imported object models that causes the crashing issue? It would help the developers to investigate the issue further if you uploaded the file.

Added subscriber: @epinonesz

Added subscriber: @epinonesz

Hi, I have the same problem with the attached file, just try to apply the gradient on weigth tool and it will crash always (this is my first bug report, sorry if this is not the way to do it)

it is a simple file so i will investigate wich is the step that produce this error, however I did not import any asset in the scene as was mentioned above.

rayos crash report.blend

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.77

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Hi, I have the same problem with the attached file, just try to apply the gradient on weigth tool and it will crash always (this is my first bug report, sorry if this is not the way to do it) it is a simple file so i will investigate wich is the step that produce this error, however I did not import any asset in the scene as was mentioned above. [rayos crash report.blend](https://archive.blender.org/developer/F7650552/rayos_crash_report.blend) **System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.77 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional)

I dont know exactly which step could be producing the crash, but I managed to reproduce it consistently in 3 new files so this could help

sorry if the video is too long, i did it exactly as it happened the first time

rayos3 crash test.blend

2019-08-05 15-09-52.mp4

I dont know exactly which step could be producing the crash, but I managed to reproduce it consistently in 3 new files so this could help sorry if the video is too long, i did it exactly as it happened the first time [rayos3 crash test.blend](https://archive.blender.org/developer/F7650618/rayos3_crash_test.blend) [2019-08-05 15-09-52.mp4](https://archive.blender.org/developer/F7650601/2019-08-05_15-09-52.mp4)
Author

If you open console before it crash, it show error too.

Annotation 2019-08-29 010131.jpg

If you open console before it crash, it show error too. ![Annotation 2019-08-29 010131.jpg](https://archive.blender.org/developer/F7708042/Annotation_2019-08-29_010131.jpg)

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Can confirm crash in 2.82

>	blender.exe!defvert_find_index(const MDeformVert * dvert, const int defgroup) Line 671	C

 	blender.exe!gradientVertInit__mapFunc(void * userData, int index, const float * co, const float * UNUSED_no_f, const short * UNUSED_no_s) Line 681	C
 	blender.exe!BKE_mesh_foreach_mapped_vert(Mesh * mesh, void(*)(void *, int, const float *, const float *, const short *) func, void * userData, MeshForeachFlag flag) Line 62	C
 	blender.exe!paint_weight_gradient_exec(bContext * C, wmOperator * op) Line 819	C
 	blender.exe!gesture_straightline_apply(bContext * C, wmOperator * op) Line 784	C
 	blender.exe!WM_gesture_straightline_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 830	C
 	blender.exe!paint_weight_gradient_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 698	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2192	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2960	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3008	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3387	C
 	blender.exe!WM_main(bContext * C) Line 420	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520	C

dw was 0xFFFFFFFFFFFFFFFF

Can confirm crash in 2.82 ``` > blender.exe!defvert_find_index(const MDeformVert * dvert, const int defgroup) Line 671 C blender.exe!gradientVertInit__mapFunc(void * userData, int index, const float * co, const float * UNUSED_no_f, const short * UNUSED_no_s) Line 681 C blender.exe!BKE_mesh_foreach_mapped_vert(Mesh * mesh, void(*)(void *, int, const float *, const float *, const short *) func, void * userData, MeshForeachFlag flag) Line 62 C blender.exe!paint_weight_gradient_exec(bContext * C, wmOperator * op) Line 819 C blender.exe!gesture_straightline_apply(bContext * C, wmOperator * op) Line 784 C blender.exe!WM_gesture_straightline_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 830 C blender.exe!paint_weight_gradient_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 698 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties) Line 2192 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2960 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3008 C blender.exe!wm_event_do_handlers(bContext * C) Line 3387 C blender.exe!WM_main(bContext * C) Line 420 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 520 C ``` `dw` was `0xFFFFFFFFFFFFFFFF`
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems like this is caused by two Displace modifiers (direction set to Normal) will destroy the CD_ORIGINDEX layer [which then cannot be found in BKE_mesh_foreach_mapped_vert -- leading to problems later...if any generative modifier follows]:

#68024.blend

  • if one of the Displace modifiers has its direction changed to something else then Normal, the crash wont happen
Seems like this is caused by two Displace modifiers (direction set to `Normal`) will destroy the `CD_ORIGINDEX` layer [which then cannot be found in `BKE_mesh_foreach_mapped_vert` -- leading to problems later...if any generative modifier follows]: [#68024.blend](https://archive.blender.org/developer/F8280651/T68024.blend) - if one of the Displace modifiers has its direction changed to something else then `Normal`, the crash wont happen
Philipp Oeser changed title from Blender crash randomly when use gradient on Weight Paint mode to Crash using Weight Paint Gradient on mesh with specific modifiers (2 mods depending on normals + generative mod) - missing CD_ORIGINDEX layer then 2020-01-16 09:28:25 +01:00

This issue was referenced by 02a204fe67

This issue was referenced by 02a204fe67eeefbe9c1485e109a21c786645585b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-09-23 07:28:22 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68024
No description provided.